added endpoints to deregister vehilce
